--- a/Templates/result.html
+++ b/Templates/result.html
@@ -16,8 +16,8 @@
 
 <body>
     <div class="container mt-5">
-        <h2 class="mb-4">Expense Splitter - Result</h2>
-        <div class="card">
+        <h2 class="mb-4 main-head">Expense Splitter-Result</h2>
+        <div class="card how-it-is-used-box">
             <div class="card-body">
                 <h5 class="card-title">Result:</h5>
                 <ul class="list-group">
